--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid text-center py-2">
   <div class="container">
-    <span><i class="fas fa-trophy fa-2x mr-2" style="color:black;"></i></span>
-    <h1 class="display-4" style="font-family:'Kaushan Script'; color:#1e1e1e;display:inline-block;">Rock Paper Scissors Lizard Spock </h1>
-    <span><i class="fas fa-trophy fa-2x ml-3" style="color:black;"></i></span>
+    <span><i class="fas fa-trophy fa-2x mr-2 icons" style="color:black;"></i></span>
+    <h1 class="display-4 main-heading" style="font-family:'Kaushan Script'; color:#1e1e1e;display:inline-block;">Rock Paper Scissors Lizard Spock </h1>
+    <span><i class="fas fa-trophy fa-2x ml-3 icons" style="color:black;"></i></span>
     <p class="lead" style="font-family:'Oswald', sans-serif; color:#1e1e1e;">~~ A great game that we came across while binging 'The Big Bang Theory'. Thanks Sheldon Lee Cooper!! ~~</p>
   </div>
 </div>
@@ -16,31 +16,31 @@
   <div class="container players">
 
     <div class="left-player text-center p-2">
-      <img src="{% static 'howard_sq.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;">
-      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>You</strong></h4>
+      <span id="howard_photo"><img src="{% static 'howard_sq.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
+      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>You</strong> - <span id="yourpoints"></span></h4>
       <div class="options my-4">
 
-        <a href="#" class="option1">
+        <a class="option1">
           <i class="far fa-hand-rock fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
         </a>
 
 
-        <a href="#" class="option2">
+        <a class="option2">
           <i class="far fa-hand-paper fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
         </a>
 
 
-        <a href="#" class="option3">
+        <a class="option3">
           <i class="far fa-hand-scissors fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
         </a>
 
 
-        <a href="#" class="option4">
+        <a class="option4">
           <i class="far fa-hand-lizard fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
         </a>
 
 
-        <a href="#" class="option5">
+        <a class="option5">
           <i class="far fa-hand-spock fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
         </a>
 
@@ -48,12 +48,30 @@
     </div>
 
     <div class="right-player text-center p-2">
-      <img src="{% static 'sheldon.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;">
-      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>Sheldon</strong></h4>
+      <span id="sheldon_photo"><img src="{% static 'sheldon.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
+      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>Sheldon</strong> - <span id="shellypoints"></span></h4>
       <h3 class="my-5" style="color: white;font-family: 'Roboto Condensed', sans-serif; display: inline-block">Sheldon Played: </h3>
-      <div id="shelly" class="ml-4" style="display: inline-block"></div>
+      <div id="shelly" class="ml-2" style="display: inline-block"></div>
     </div>
   </div>
 </div>
 
+<!-- Button trigger modal -->
+<button type="button" data-toggle="modal" data-target="#winner" id="decision" style="display:none;"></button>
+
+<!-- Modal -->
+<div class="modal fade" id="winner" tabindex="-1" role="dialog" aria-labelledby="title" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content bg-warning">
+      <div class="modal-header">
+        <h5 class="modal-title text-center" id="title" style="color: #f4f4f4; font-size: 2rem; font-family: 'Roboto Condensed', sans-serif"></h5>
+        <button type="button" class="close" style="color: white" data-dismiss="modal" aria-label="Close" onclick="reset()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="body">
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
