--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,11 @@
     .option1, .option2, .option3, .option4, .option5 {
       flex:1;
       margin-bottom: 4px;
+      transition: all 0.8s;
+    }
+
+    .option1:hover, .option2:hover, .option3:hover, .option4:hover, .option5:hover {
+      font-size: 1.2rem;
     }
 
   </style>
@@ -99,6 +104,7 @@
   <script type="text/javascript" src="{% static 'assets/main.js' %}"></script>
   <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
