--- a/templates/home.html
+++ b/templates/home.html
@@ -13,11 +13,11 @@
 </div>
 
 <div class="container py-3" style="border: 2px solid #ffc107">
+  <div id="decider"></div>
   <div class="container players">
-
     <div class="left-player text-center p-2">
       <span id="howard_photo"><img src="{% static 'howard_sq.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
-      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>You</strong> - <span id="yourpoints"></span></h4>
+      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>You</strong> <span id="yourpoints"></span></h4>
       <div class="options my-4">
 
         <a class="option1">
@@ -49,29 +49,13 @@
 
     <div class="right-player text-center p-2">
       <span id="sheldon_photo"><img src="{% static 'sheldon.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
-      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>Sheldon</strong> - <span id="shellypoints"></span></h4>
+      <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>Sheldon</strong> <span id="shellypoints"></span></h4>
       <h3 class="my-5" style="color: white;font-family: 'Roboto Condensed', sans-serif; display: inline-block">Sheldon Played: </h3>
       <div id="shelly" class="ml-2" style="display: inline-block"></div>
     </div>
   </div>
+
+
 </div>
 
-<!-- Button trigger modal -->
-<button type="button" data-toggle="modal" data-target="#winner" id="decision" style="display:none;"></button>
-
-<!-- Modal -->
-<div class="modal fade" id="winner" tabindex="-1" role="dialog" aria-labelledby="title" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content bg-warning">
-      <div class="modal-header">
-        <h5 class="modal-title text-center" id="title" style="color: #f4f4f4; font-size: 2rem; font-family: 'Roboto Condensed', sans-serif"></h5>
-        <button type="button" class="close" style="color: white" data-dismiss="modal" aria-label="Close" onclick="reset()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="body">
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
