--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald|Spicy+Rice" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- <script>
+    ScrollReveal({ reset: true });
+    </script> -->
   <style media="screen">
 
     body{
       background:#cc141d;
+      overflow: auto;
     }
 
     a:hover {
@@ -31,7 +36,14 @@
       }
     }
 
-    @media only screen and (max-width:1000px){
+    @media only screen and (max-width:1900px){
+
+    }
+
+    @media only screen and (max-width: 1200px){
+      .img-container{
+        display: none;
+      }
       .main-heading{
         font-size: 2em;
       }
@@ -40,26 +52,105 @@
       }
     }
 
+    @media only screen and (max-width: 768px){
+      .notsmall{
+        display: none;
+      }
+      .smalltitle{
+        font-size: 1.2rem;
+      }
+      .smaller{
+        font-size: 0.6rem;
+      }
+      .options{
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .opt1, .opt2, .opt3, .opt4, .opt5 {
+        font-size: 0.6rem;
+      }
+      #howard_photo img{
+        width: 5rem;
+        height: 5rem;
+        margin-bottom: 1px;
+      }
+      #sheldon_photo img{
+        width: 5rem;
+        height: 5rem;
+        margin-bottom: 1px;
+      }
+      #decider img{
+        font-size: 0.6rem;
+      }
+      .right-player h3{
+        font-size: 0.8rem;
+      }
+    }
+
+
+  .options{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  /* .option1, .option2, .option3, .option4, .option5 {
+    flex:1;
+    margin-bottom: 4px;
+    transition: all 0.8s;
+    display: flex;
+    flex-direction: column;
+  } */
+
+  .opt1, .opt2, .opt3, .opt4, .opt5 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    transition: all 0.8s;
+  }
+
+  /* .options{
+    display: flex;
+    flex-wrap: wrap;
+  }
+    .option1, .option2, .option3, .option4, .option5 {
+      flex:1;
+      margin-bottom: 4px;
+      transition: all 0.8s;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .opt1, .opt2, .opt3, .opt4, .opt5 {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap; */
 
 
     .players .left-player, .players .right-player {
       flex: 2;
     }
 
-    .options{
-      display: flex;
-      flex-wrap: wrap;
-    }
 
-    .option1, .option2, .option3, .option4, .option5 {
-      flex:1;
-      margin-bottom: 4px;
-      transition: all 0.8s;
-    }
 
     .option1:hover, .option2:hover, .option3:hover, .option4:hover, .option5:hover {
       font-size: 1.2rem;
     }
+
+    .hidden:hover{
+      visibility: visible;
+    }
+
+    .searchbutton{
+      border-radius: 4px;
+      transition: all 0.4s;
+    }
+
+    .searchbutton:hover{
+      color: #cc141d !important;
+      text-decoration: none;
+      background: white;
+    }
+
 
   </style>
 
@@ -67,19 +158,25 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-    <div class="container">
-      <img src="{% static 'flashlogo.png' %}" alt="logo of the flash" widht="30" height="30" class="mr-2 pt-0.2">
-      <a href="{% url 'home' %}" class="navbar-brand" style="font-family:'Kaushan Script', sans-serif; color: white; font-size:1.7rem;"> ~ The Big Bang Theory</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container" id="main-nav">
+      <a href="{% url 'home' %}" onclick="sync()" class="navbar-brand" style="font-family:'Kaushan Script', sans-serif; color: white; font-size:1.5rem;"><img src="{% static 'tbbtlogo.png' %}" alt="logo of the flash" widht="45" height="45" class="mr-2">
+        ~ The Big Bang Theory</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="font-size: 0.8rem;">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto white">
+          {% if 'blogs' in request.path %}
           <li class="nav-item active white">
-            <a class="nav-link " href="#" style="color: #f4f4f4; font-size:1.5rem; font-family:'Oswald', sans-serif;">Blog</a>
+            <a class="nav-link " href="javascript:{document.getElementById('blogform').click()}" onclick="sync()" style="color: #f4f4f4; font-size:1.5rem; font-family:'Oswald', sans-serif;"><i class="fas fa-plus-circle fa-1x"></i></a>
           </li>
+          {% else %}
+          <li class="nav-item active white">
+            <a class="nav-link " href="{% url 'blogs' %}" onclick="sync()" style="color: #f4f4f4; font-size:1.5rem; font-family:'Oswald', sans-serif;">Blog</a>
+          </li>
+          {% endif %}
           <li class="nav-item">
-            <a class="nav-link white" href="{% url 'howtoplay' %}" style="color: #f4f4f4; font-size:1.5rem; font-family:'Oswald', sans-serif;">How It Works</a>
+            <a class="nav-link white" href="{% url 'howtoplay' %}" onclick="sync()" style="color: #f4f4f4; font-size:1.5rem; font-family:'Oswald', sans-serif;">How It Works</a>
           </li>
           <li class="nav-item">
             <a class="nav-link white" href="https://github.com/AniketShahane" target="_blank" style="color: #f4f4f4;"><i class="fab fa-github-square fa-2x"></i></a>
@@ -95,17 +192,62 @@
   {% block content %}
 
   {% endblock %}
-  <footer style="background: white;" class="p-3 mt-3">
+  <!-- {% if 'blogs' in request.path or 'howitworks' in request.path%}
+  <footer style="background: white; position: fixed; width: 100vw; bottom:0;" class="p-3 mt-3">
     <div class="container text-area">
       <h6 style="color:#cc141d ;font-family: 'Roboto Condensed', sans-serif" class="text-center my-auto">Created By Aniket Shahane, (shahaneaniket11@gmail.com)</h6>
     </div>
   </footer>
+  {% else %}
+  <footer style="background: white; display: none;" class="p-3 mt-3">
+    <div class="container text-area">
+      <h6 style="color:#cc141d ;font-family: 'Roboto Condensed', sans-serif" class="text-center my-auto">Created By Aniket Shahane, (shahaneaniket11@gmail.com)</h6>
+    </div>
+  </footer>
+  {% endif %} -->
+  <button type="hidden" id="blogform" class="btn btn-primary" style="display: none;" data-toggle="modal" data-target="#exampleModalLong"></button>
 
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content bg-warning">
+        <div class="modal-header">
+          <h5 class="modal-title" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1.8rem;" id="exampleModalLongTitle">Add Your Own Blog !!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="post" action="{% url 'upload' %}">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="exampleFormControlInput1" style="color: white; font-family: 'Roboto Condensed', sans-serif; font-size: 1rem;">Title</label>
+              <input type="text" class="form-control" name="title" id="exampleFormControlInput1" required>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1" style="color: white; font-family: 'Roboto Condensed', sans-serif; font-size: 1rem;">Content of Blog</label>
+              <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3" required></textarea>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput2" style="color: white; font-family: 'Roboto Condensed', sans-serif; font-size: 1rem;">Full Name</label>
+              <input type="text" class="form-control" name="name" id="exampleFormControlInput2" required>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput3" style="color: white; font-family: 'Roboto Condensed', sans-serif; font-size: 1rem;">Email Id</label>
+              <input type="email" class="form-control" name="email" id="exampleFormControlInput3" required>
+            </div>
+            <button type="submit" class="btn btn-outline-light btn-block" style="color: white; font-family: 'Roboto Condensed', sans-serif;" name="upload">Upload Your Blog</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="{% static 'assets/main.js' %}"></script>
   <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 
 </html>
