--- a/templates/blogs/blog.html
+++ b/templates/blogs/blog.html
@@ -6,9 +6,9 @@
 <div class="container mt-4">
   <div class="jumbotron jumbotron-fluid bg-light">
     <div class="container text-center">
-      <h1 class="display-4 text-center mb-2" style="color: #cc141d;font-family: 'Kaushan Script', sans-serif, sans-serif; font-weight: 300;">{{blog.title}}</h1>
+      <h1 class="display-4 text-center mb-2 blog_title" style="color: #cc141d;font-family: 'Kaushan Script', sans-serif, sans-serif; font-weight: 300;">{{blog.title}}</h1>
       <br>
-      <p style=" width: 60%; color: #1e1e1e; font-family: 'Roboto Condensed', sans-serif; display: inline-block; font-size: 1.4rem; margin: 0 auto;">
+      <p style=" width: 80%; color: #1e1e1e; font-family: 'Roboto Condensed', sans-serif; display: inline-block; font-size: 1.4rem; margin: 0 auto;">
         {{blog.content}}
       </p>
       <br><br>
