--- a/templates/home.html
+++ b/templates/home.html
@@ -12,12 +12,13 @@
   </div>
 </div>
 
-<div class="container pt-2" style="border: 2px solid #ffc107">
+<div class="container pt-2 mb-2" style="border: 2px solid #ffc107">
   <div class="container players">
     <div class="left-player text-center p-2">
       <span id="howard_photo"><img src="{% static 'howard_sq.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
       <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>You</strong> <span id="yourpoints"></span></h4>
-      <div class="options my-4 ml-5">
+      <div class="options mt-2">
+        <!-- my-4 ml-5 -->
 
         <a class="option1 mb-2">
           <span id="one" class="opt1">
@@ -69,7 +70,7 @@
     </div>
   </div>
 
-  <div id="decider"></div>
+  <!-- <div id="decider"></div> -->
 
 </div>
 
