--- a/templates/blogs/search.html
+++ b/templates/blogs/search.html
@@ -45,7 +45,7 @@
     {% endfor %}
   </div>
   {% else %}
-  <h4 class="text-center mt-4" style="font-size: 3rem;color: White; font-family: 'Roboto Condensed', sans-serif;">No Matching Results!! </h4>
+  <h4 class="text-center mt-4" style="font-size: 3rem;color: White; font-family: 'Roboto Condensed', sans-serif;"><i class="far fa-times-circle"></i> No Matching Results // No Blogs Exist <i class="far fa-times-circle"></i></h4>
   {% endif %}
 </div>
 {% endblock %}
