--- a/templates/blogs/search.html
+++ b/templates/blogs/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %} Search {% endblock %}
-
+{% block js %}<script src="https://unpkg.com/scrollreveal"></script>{% endblock %}
 {% block content %}
 <div class="container py-4 mt-2" style="width: 60%; border: 2px solid white; background-opacity: 0.5;">
   <form class="bg-warning p-4" method="get" style="border-radius: 4px">
