--- a/templates/blogs/blog.html
+++ b/templates/blogs/blog.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}{{blog.title}}{% endblock %}
-
+{% block js %}<script src="https://unpkg.com/scrollreveal"></script>{% endblock %}
 {% block content %}
 <div class="container mt-4">
   <div class="jumbotron jumbotron-fluid bg-light">
