--- a/templates/blogs/blogs.html
+++ b/templates/blogs/blogs.html
@@ -2,6 +2,7 @@
 {% load humanize %}
 {% load static %}
 {% block title %}Blogs{% endblock %}
+{% block js %}<script src="https://unpkg.com/scrollreveal"></script>{% endblock %}
 {% block content %}
 
 
