Add more responsiveness

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 
         <a class="option1 mb-2">
           <span id="one" class="opt1">
-            <i class="far fa-hand-rock fa-3x p-3 mr-2" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
+            <i class="far fa-hand-rock fa-3x p-3 mr-2 sb" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
             <small class="hidden" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1rem;">Rock</small>
           </span>
         </a>
@@ -31,7 +31,7 @@
 
         <a class="option2 mb-2">
           <span id="two" class="opt2">
-            <i class="far fa-hand-paper fa-3x p-3 mr-2" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
+            <i class="far fa-hand-paper fa-3x p-3 mr-2 sb" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
             <small class="hidden" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1rem; ">Paper</small>
           </span>
         </a>
@@ -39,7 +39,7 @@
 
         <a class="option3 mb-2">
           <span id="three" class="opt3">
-            <i class="far fa-hand-scissors fa-3x p-3 mr-2" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
+            <i class="far fa-hand-scissors fa-3x p-3 mr-2 sb" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
             <small class="hidden" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1rem; ">Scissors</small>
           </span>
         </a>
@@ -47,7 +47,7 @@
 
         <a class="option4 mb-2">
           <span id="four" class="opt4">
-            <i class="far fa-hand-lizard fa-3x p-3 mr-2" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
+            <i class="far fa-hand-lizard fa-3x p-3 mr-2 sb" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
             <small class="hidden" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1rem; ">Lizard</small>
           </span>
         </a>
@@ -55,7 +55,7 @@
 
         <a class="option5 mb-2">
           <span id="five" class="opt5">
-            <i class="far fa-hand-spock fa-3x p-3" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
+            <i class="far fa-hand-spock fa-3x p-3 sb" style="color:#ffc107; border: 2px solid white; border-radius:50%"></i>
             <small class="hidden" style="color: white; font-family: 'Oswald', sans-serif; font-size: 1rem;">Spock</small>
           </span>
         </a>
@@ -66,7 +66,7 @@
     <div class="right-player text-center p-2">
       <span id="sheldon_photo"><img src="{% static 'sheldon.jpg' %}" class="p-2" width="200" height="200" style="border-radius:50%; border: 2px solid #eee;"></span>
       <h4 class="my-1" style="color: white;font-family: 'Roboto Condensed', sans-serif"><strong>Sheldon</strong> <span id="shellypoints"></span></h4>
-      <h3 class="my-5" style="color: white;font-family: 'Roboto Condensed', sans-serif; display: inline-block">Sheldon Played: </h3>
+      <h3 class="my-3" style="color: white;font-family: 'Roboto Condensed', sans-serif; display: inline-block" id="splayed">Sheldon Played: </h3>
       <div id="shelly" class="ml-2" style="display: inline-block"></div>
     </div>
   </div>
