--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,13 @@
         display: none;
       }
       .opt1, .opt2, .opt3, .opt4, .opt5 {
-        font-size: 0.8rem;
+        font-size: 0.4rem;
+      }
+    }
+
+    @media only scren and (max-width: 740px){
+      .opt1, .opt2, .opt3, .opt4, .opt5 {
+        font-size: 0.3rem;
       }
     }
 
@@ -86,7 +92,14 @@
         margin:0;
       }
       .opt1, .opt2, .opt3, .opt4, .opt5 {
-        font-size: 0.6rem;
+        font-size: 0.2rem;
+      }
+      .sb {
+        padding: 0;
+        font-size: 1rem;
+      }
+      #splayed {
+        font-size: 1.5rem;
       }
       /* .opt1, .opt2, .opt3 {
         flex: 1;
