Add Minor Adjustments

--- a/templates/base.html
+++ b/templates/base.html
@@ -277,7 +277,7 @@
               <label for="exampleFormControlInput3" style="color: white; font-family: 'Roboto Condensed', sans-serif; font-size: 1rem;">Email Id</label>
               <input type="email" class="form-control" name="email" id="exampleFormControlInput3" required>
             </div>
-            <button type="submit" class="btn btn-outline-light btn-block" style="color: white; font-family: 'Roboto Condensed', sans-serif;" name="upload">Upload Your Blog</button>
+            <button type="submit" class="btn btn-outline-light btn-block" style="color: #ffc107; font-family: 'Roboto Condensed', sans-serif;" name="upload">Upload Your Blog</button>
           </form>
         </div>
       </div>
